--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,4 +1,6 @@
 .hero {
+    position: relative;
+    z-index: 1;
     box-sizing: border-box;
     width: 100%;
     display: flex;
@@ -7,7 +9,7 @@
     gap: 40px;
     position: relative;;
     z-index: 1;
-    padding: 10vh 8%;
+    padding: 10vh 12%;
     min-height: 80vh;
     overflow: hidden;
 }
