--- a/src/CSS/ContactContent.css
+++ b/src/CSS/ContactContent.css
@@ -180,8 +180,8 @@
 
 .submit-btn {
   width: 100%;
-  background-color: #0D131A;
-  color: white;
+  background-color: #FFC72C;
+  color: #000;
   padding: 14px;
   border: none;
   border-radius: 8px;
