--- a/src/CSS/ContactContent.css
+++ b/src/CSS/ContactContent.css
@@ -272,7 +272,7 @@
 
 .faq-bar {
   width: 3px;
-  background-color: #2563EB;
+  background-color: #FFC72C;
   border-radius: 2px;
   flex-shrink: 0;
 }
