fix: update home.css width property for improved layout consistency

--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 1;
     box-sizing: border-box;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
